# cuemeet-teams-bot

./: .gitignore  Dockerfile  Makefile  README.md  app.py  buildspec-staging.yml  buildspec.yml  monitoring.py  pyproject.toml
config/: settings.py
teams_meet/: bot.py
transcript_extension/: background.js  content.js  manifest.json
